Builds should now work
Old integration tests vere converted from TestNG and some of them had to
be ignored.

--- a/age3-examples/build.gradle
+++ b/age3-examples/build.gradle
@@ -32,6 +32,8 @@ applicationDefaultJvmArgs = [
 dependencies {
 	compile project(':age3-core')
 	compile project(':age3-console')
+
+	testCompile 'org.springframework:spring-test:+'
 }
 
 shadowJar {
