--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,23 @@
 allprojects {
 	group 'pl.edu.agh.age'
 	version '0.3-SNAPSHOT'
+	apply plugin: 'maven-publish'
+
+	publishing {
+		repositories {
+			maven {
+				if(project.version.endsWith('-SNAPSHOT')) {
+					url "${nexusUrl}/repository/maven-snapshots"
+				} else {
+					url "${nexusUrl}/repository/maven-releases"
+				}
+				credentials {
+					username = nexusUsername
+					password = nexusPassword
+				}
+			}
+		}
+	}
 }
 
 buildscript {
@@ -32,7 +49,6 @@ buildscript {
 }
 
 subprojects {
-	apply plugin: 'maven-publish'
 	apply plugin: 'java'
 	apply plugin: 'ch.raffael.pegdown-doclet'
 
@@ -46,6 +62,15 @@ subprojects {
 	repositories {
 		mavenCentral()
 	}
+
+	publishing {
+		publications {
+			mavenJava(MavenPublication) {
+				from components.java
+			}
+		}
+	}
+
 
 	dependencies {
 		compile 'javax.inject:javax.inject:1'
