--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:8-jdk-alpine
 
 VOLUME /dependencies
 
-COPY age3-core-0.3-SNAPSHOT-all.jar ./age3-all.jar
+COPY age3-core.jar ./age3-core.jar
 COPY start.sh ./
 
 CMD ["/bin/sh", "start.sh"]
