--- a/build.gradle
+++ b/build.gradle
@@ -25,15 +25,19 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath 'ch.raffael.pegdown-doclet:pegdown-doclet:+'
-		classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.8'
+		classpath 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
 	}
+}
+
+plugins {
+	id 'net.ltgt.errorprone' version '0.0.8'
 }
 
 allprojects {
 	group 'pl.edu.agh.age'
 	version '0.3-SNAPSHOT'
 	apply plugin: 'maven-publish'
+	apply plugin: 'ch.raffael.pegdown-doclet'
 
 	repositories {
 		mavenCentral()
@@ -59,8 +63,6 @@ allprojects {
 
 subprojects {
 	apply plugin: 'java'
-	apply plugin: 'ch.raffael.pegdown-doclet'
-	apply plugin: 'net.ltgt.errorprone'
 
 	sourceCompatibility = 1.8
 	targetCompatibility = 1.8
@@ -132,7 +134,8 @@ task alljavadoc(type: Javadoc, group: "Documentation") {
 	options.links 'http://docs.spring.io/spring/docs/current/javadoc-api/'
 	options.links 'https://google.github.io/guava/releases/snapshot/api/docs/'
 	options.links 'http://docs.hazelcast.org/docs/3.7/javadoc/'
+	options.tags = ['apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:', 'implNote:a:Implementation Note:']
 	destinationDir = file("${buildDir}/docs/javadoc")
 }
 
-apply plugin: 'ch.raffael.pegdown-doclet'
+
