--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
 	}
 	dependencies {
 		classpath 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
+		classpath 'net.researchgate:gradle-release:2.4.1'
 	}
 }
 
@@ -38,9 +39,16 @@ allprojects {
 	version '0.3-SNAPSHOT'
 	apply plugin: 'maven-publish'
 	apply plugin: 'ch.raffael.pegdown-doclet'
+	apply plugin: 'net.researchgate.release'
 
 	repositories {
 		mavenCentral()
+	}
+
+	release {
+		git {
+			requireBranch = 'release/[0-9.]+'
+		}
 	}
 
 	publishing {
@@ -60,6 +68,10 @@ allprojects {
 	}
 }
 
+// Mock so gradle-release stop complaining
+task build() {
+
+}
 
 subprojects {
 	apply plugin: 'java'
