--- a/age3-console/build.gradle
+++ b/age3-console/build.gradle
@@ -32,12 +32,12 @@ applicationDefaultJvmArgs = [
 dependencies {
 	compile project(':age3-core')
 
-	compile 'com.hazelcast:hazelcast-client:3.7+'
-	compile 'org.jline:jline:+'
+	compile 'com.hazelcast:hazelcast-client:3.7.3'
+	compile 'org.jline:jline:3.1.0'
 
 	// JNA is needed for jline
-	runtime 'net.java.dev.jna:jna:+'
-	runtime 'org.fusesource.jansi:jansi:+'
+	runtime 'net.java.dev.jna:jna:4.2.2'
+	runtime 'org.fusesource.jansi:jansi:1.11'
 }
 
 shadowJar {
