--- a/age3-core/build.gradle
+++ b/age3-core/build.gradle
@@ -38,17 +38,17 @@ shadowJar {
 }
 
 dependencies {
-	compile 'org.springframework:spring-context:+'
-	compile('com.hazelcast:hazelcast:3.7+') {
+	compile 'org.springframework:spring-context:4.3.4.RELEASE'
+	compile('com.hazelcast:hazelcast:3.7.3') {
 		// Not needed and would introduce a lot of duplicated annotations
 		exclude group: 'net.sourceforge.findbugs'
 	}
-	compile 'com.hazelcast:hazelcast-spring:3.7+'
-	compile 'org.jgrapht:jgrapht-core:+'
+	compile 'com.hazelcast:hazelcast-spring:3.7.3'
+	compile 'org.jgrapht:jgrapht-core:1.0.0'
 
-	runtime 'javax.cache:cache-api:+'
+	runtime 'javax.cache:cache-api:1.0.0'
 
-	testCompile 'org.springframework:spring-test:+'
+	testCompile 'org.springframework:spring-test:4.3.4.RELEASE'
 }
 
 task node(type: JavaExec) {
