Introduce topology API for compute applications
pl.edu.agh.age.compute.api.TopologyProvider provides an entry point to
the API. Topologies are functions that generate graphs comprised of
nodes passed by the user.
Currently provided are: uni-ring, bi-ring, full-mesh topologies.

StreamAgents use TopologyProvider to manage migrations. Default topology
is FullMesh.

Fixes #30

--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ subprojects {
 		compile 'io.javaslang:javaslang:2.+'
 		compile 'org.apache.commons:commons-lang3:+'
 		compile 'com.google.guava:guava:+'
+		compile 'one.util:streamex:+'
 
 		runtime 'org.codehaus.groovy:groovy:+'
 		compile 'ch.qos.logback:logback-classic:+'
