--- a/age3-console/build.gradle
+++ b/age3-console/build.gradle
@@ -44,39 +44,43 @@ shadowJar {
 }
 
 // Use ProcessBuilder to have a correct tty on Linux
-task(shell, dependsOn: 'classes') << {
-	def classpath = sourceSets.main.runtimeClasspath
-	def command = [
-		'java',
-		'-cp', classpath.collect().join(java.io.File.pathSeparator),
-		'pl.edu.agh.age.console.ConsoleBootstrapper'
-	]
-	if (project.hasProperty('appArgs')) {
-		command.addAll(Eval.me(appArgs))
+task(shell, dependsOn: 'classes') {
+	doLast {
+		def classpath = sourceSets.main.runtimeClasspath
+		def command = [
+			'java',
+			'-cp', classpath.collect().join(java.io.File.pathSeparator),
+			'pl.edu.agh.age.console.ConsoleBootstrapper'
+		]
+		if (project.hasProperty('appArgs')) {
+			command.addAll(Eval.me(appArgs))
+		}
+		def proc = new ProcessBuilder(command)
+			.redirectOutput(ProcessBuilder.Redirect.INHERIT)
+			.redirectInput(ProcessBuilder.Redirect.INHERIT)
+			.redirectError(ProcessBuilder.Redirect.INHERIT)
+			.start()
+		proc.waitFor()
 	}
-	def proc = new ProcessBuilder(command)
-		.redirectOutput(ProcessBuilder.Redirect.INHERIT)
-		.redirectInput(ProcessBuilder.Redirect.INHERIT)
-		.redirectError(ProcessBuilder.Redirect.INHERIT)
-		.start()
-	proc.waitFor()
 }
 
-task(standalone, dependsOn: 'classes') << {
-	def classpath = sourceSets.main.runtimeClasspath
-	def command = [
-		'java',
-		'-cp', classpath.collect().join(java.io.File.pathSeparator),
-		'pl.edu.agh.age.console.ConsoleBootstrapper',
-		'standalone'
-	]
-	if (project.hasProperty('appArgs')) {
-		command.addAll(Eval.me(appArgs))
+task(standalone, dependsOn: 'classes') {
+	doLast {
+		def classpath = sourceSets.main.runtimeClasspath
+		def command = [
+			'java',
+			'-cp', classpath.collect().join(java.io.File.pathSeparator),
+			'pl.edu.agh.age.console.ConsoleBootstrapper',
+			'standalone'
+		]
+		if (project.hasProperty('appArgs')) {
+			command.addAll(Eval.me(appArgs))
+		}
+		def proc = new ProcessBuilder(command)
+			.redirectOutput(ProcessBuilder.Redirect.INHERIT)
+			.redirectInput(ProcessBuilder.Redirect.INHERIT)
+			.redirectError(ProcessBuilder.Redirect.INHERIT)
+			.start()
+		proc.waitFor()
 	}
-	def proc = new ProcessBuilder(command)
-		.redirectOutput(ProcessBuilder.Redirect.INHERIT)
-		.redirectInput(ProcessBuilder.Redirect.INHERIT)
-		.redirectError(ProcessBuilder.Redirect.INHERIT)
-		.start()
-	proc.waitFor()
 }
