--- a/build.gradle
+++ b/build.gradle
@@ -20,18 +20,15 @@
 buildscript {
 	repositories {
 		mavenCentral()
-		maven {
-			url "https://plugins.gradle.org/m2/"
-		}
 	}
 	dependencies {
 		classpath 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
-		classpath 'net.researchgate:gradle-release:2.4.1'
 	}
 }
 
 plugins {
-	id 'net.ltgt.errorprone' version '0.0.8'
+	id 'net.ltgt.errorprone' version '0.0.9'
+	id 'net.researchgate.release' version '2.5.0'
 }
 
 allprojects {
@@ -39,7 +36,6 @@ allprojects {
 	version '0.4-SNAPSHOT'
 	apply plugin: 'maven-publish'
 	apply plugin: 'ch.raffael.pegdown-doclet'
-	apply plugin: 'net.researchgate.release'
 
 	repositories {
 		mavenCentral()
