--- a/age3-console/build.gradle
+++ b/age3-console/build.gradle
@@ -30,7 +30,7 @@ applicationDefaultJvmArgs = [
 dependencies {
 	compile project(':age3-core')
 
-	compile 'com.hazelcast:hazelcast-client:3.7+'
+	compile 'com.hazelcast:hazelcast-client:default'
 	compile 'org.jline:jline:+'
 
 	// JNA is needed for jline
