--- a/age3-examples/build.gradle
+++ b/age3-examples/build.gradle
@@ -52,9 +52,11 @@ distShadowZip {
 task(shell, dependsOn: 'classes') {
 	doLast {
 		def classpath = sourceSets.main.runtimeClasspath
+		def systemProperties = System.properties.grep { it.key.startsWith('age') }.collect { '-D' + it }.join ' '
 		def command = [
 			'java',
 			'-cp', classpath.collect().join(java.io.File.pathSeparator),
+			systemProperties,
 			'pl.edu.agh.age.console.ConsoleBootstrapper'
 		]
 		if (project.hasProperty('appArgs')) {
@@ -72,9 +74,11 @@ task(shell, dependsOn: 'classes') {
 task(standalone, dependsOn: 'classes') {
 	doLast {
 		def classpath = sourceSets.main.runtimeClasspath
+		def systemProperties = System.properties.grep { it.key.startsWith('age') }.collect { '-D' + it }.join ' '
 		def command = [
 			'java',
 			'-cp', classpath.collect().join(java.io.File.pathSeparator),
+			systemProperties,
 			'pl.edu.agh.age.console.ConsoleBootstrapper',
 			'standalone'
 		]
@@ -91,6 +95,7 @@ task(standalone, dependsOn: 'classes') {
 }
 
 task node(type: JavaExec) {
+	systemProperties = System.properties
 	main = 'pl.edu.agh.age.node.NodeBootstrapper'
 	classpath = sourceSets.main.runtimeClasspath
 	standardOutput = System.out
