--- a/age3-stream-agents/build.gradle
+++ b/age3-stream-agents/build.gradle
@@ -56,6 +56,7 @@ jmhJar {
 }
 
 task node(type: JavaExec) {
+	systemProperties = System.properties
 	main = 'pl.edu.agh.age.node.NodeBootstrapper'
 	classpath = sourceSets.main.runtimeClasspath
 	standardOutput = System.out
