Switch from Javaslang to Vavr after the rebranding
Fixes #40

--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,7 @@ subprojects {
 		compile 'org.slf4j:slf4j-api:1.7+'
 		compile 'org.slf4j:jcl-over-slf4j:1.7+'
 		compile 'com.google.code.findbugs:jsr305:+'
-		compile 'io.javaslang:javaslang:2.+'
+		compile 'io.vavr:vavr:+'
 		compile 'org.apache.commons:commons-lang3:+'
 		compile 'com.google.guava:guava:+'
 		compile 'one.util:streamex:+'
