--- a/age3-console/build.gradle
+++ b/age3-console/build.gradle
@@ -19,7 +19,7 @@
 
 plugins {
 	id 'application'
-	id 'com.github.johnrengelman.shadow' version '1.2.3'
+	id 'com.github.johnrengelman.shadow' version '2.0.2'
 }
 
 mainClassName = 'pl.edu.agh.age.console.ConsoleBootstrapper'
@@ -57,6 +57,7 @@ task(shell, dependsOn: 'classes') {
 		if (project.hasProperty('appArgs')) {
 			command.addAll(Eval.me(appArgs))
 		}
+		command.removeAll("")
 		def proc = new ProcessBuilder(command)
 			.redirectOutput(ProcessBuilder.Redirect.INHERIT)
 			.redirectInput(ProcessBuilder.Redirect.INHERIT)
@@ -80,6 +81,7 @@ task(standalone, dependsOn: 'classes') {
 		if (project.hasProperty('appArgs')) {
 			command.addAll(Eval.me(appArgs))
 		}
+		command.removeAll("")
 		def proc = new ProcessBuilder(command)
 			.redirectOutput(ProcessBuilder.Redirect.INHERIT)
 			.redirectInput(ProcessBuilder.Redirect.INHERIT)
