--- a/age3-core/build.gradle
+++ b/age3-core/build.gradle
@@ -19,7 +19,7 @@
 
 plugins {
 	id 'application'
-	id 'com.github.johnrengelman.shadow' version '1.2.4'
+	id 'com.github.johnrengelman.shadow' version '2.0.2'
 }
 
 mainClassName = 'pl.edu.agh.age.node.NodeBootstrapper'
@@ -35,11 +35,15 @@ shadowJar {
 	version = null
 }
 
-distShadowTar {
+shadowDistTar {
+	baseName = 'age3-core'
+	classifier = null
 	version = null
 }
 
-distShadowZip {
+shadowDistZip {
+	baseName = 'age3-core'
+	classifier = null
 	version = null
 }
 
