--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
+		classpath 'ch.raffael.markdown-doclet:markdown-doclet:1.4'
 	}
 }
 
@@ -33,16 +33,19 @@ plugins {
 
 project.ext.hazelcastVersion = '3.9'
 project.ext.springVersion = '5.0'
-project.ext.jmhVersion = '1.18'
+project.ext.jmhVersion = '1.19'
 
 allprojects {
 	group 'pl.edu.agh.age'
 	version '0.6-SNAPSHOT'
 	apply plugin: 'maven-publish'
-	apply plugin: 'ch.raffael.pegdown-doclet'
+	apply plugin: 'ch.raffael.markdown-doclet'
 
 	repositories {
 		mavenCentral()
+		maven {
+			url "http://repo.jenkins-ci.org/releases/"
+		}
 	}
 
 	release {
