--- a/build.gradle
+++ b/build.gradle
@@ -103,6 +103,31 @@ subprojects {
 		publications {
 			mavenJava(MavenPublication) {
 				from components.java
+
+				pom.withXml {
+					// Generate map of resolved versions
+					// Taken from here: https://github.com/gradle/gradle/issues/1232
+					Map resolvedVersionMap = [:]
+					Set<ResolvedArtifact> resolvedArtifacts = configurations.compile.getResolvedConfiguration().getResolvedArtifacts()
+					resolvedArtifacts.each {
+						ModuleVersionIdentifier mvi = it.getModuleVersion().getId();
+						resolvedVersionMap.put("${mvi.getGroup()}:${mvi.getName()}", mvi.getVersion())
+					}
+					Set<ResolvedArtifact> testResolved = configurations.testCompile.getResolvedConfiguration().getResolvedArtifacts()
+					testResolved.each {
+						ModuleVersionIdentifier mvi = it.getModuleVersion().getId();
+						resolvedVersionMap.put("${mvi.getGroup()}:${mvi.getName()}", mvi.getVersion())
+					}
+
+					// Update dependencies with resolved versions
+					if (asNode().dependencies) {
+						asNode().dependencies.first().each {
+							def groupId = it.get("groupId").first().value().first()
+							def artifactId = it.get("artifactId").first().value().first()
+							it.get("version").first().value = resolvedVersionMap.get("${groupId}:${artifactId}")
+						}
+					}
+				}
 			}
 		}
 	}
