--- a/build.gradle
+++ b/build.gradle
@@ -108,14 +108,19 @@ subprojects {
 					// Generate map of resolved versions
 					// Taken from here: https://github.com/gradle/gradle/issues/1232
 					Map resolvedVersionMap = [:]
-					Set<ResolvedArtifact> resolvedArtifacts = configurations.compile.getResolvedConfiguration().getResolvedArtifacts()
-					resolvedArtifacts.each {
-						ModuleVersionIdentifier mvi = it.getModuleVersion().getId();
+					Set<ResolvedArtifact> compileArtifacts = configurations.compile.getResolvedConfiguration().getResolvedArtifacts()
+					compileArtifacts.each {
+						ModuleVersionIdentifier mvi = it.getModuleVersion().getId()
 						resolvedVersionMap.put("${mvi.getGroup()}:${mvi.getName()}", mvi.getVersion())
 					}
-					Set<ResolvedArtifact> testResolved = configurations.testCompile.getResolvedConfiguration().getResolvedArtifacts()
-					testResolved.each {
-						ModuleVersionIdentifier mvi = it.getModuleVersion().getId();
+					Set<ResolvedArtifact> runtimeArtifacts = configurations.runtime.getResolvedConfiguration().getResolvedArtifacts()
+					runtimeArtifacts.each {
+						ModuleVersionIdentifier mvi = it.getModuleVersion().getId()
+						resolvedVersionMap.put("${mvi.getGroup()}:${mvi.getName()}", mvi.getVersion())
+					}
+					Set<ResolvedArtifact> testCompileArtifacts = configurations.testCompile.getResolvedConfiguration().getResolvedArtifacts()
+					testCompileArtifacts.each {
+						ModuleVersionIdentifier mvi = it.getModuleVersion().getId()
 						resolvedVersionMap.put("${mvi.getGroup()}:${mvi.getName()}", mvi.getVersion())
 					}
 
